--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,13 @@
 
 h1 {
     text-align: center;
-    background-color: rgb(253, 184, 95);
+    background-color: rgb(1, 108, 108);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     width: 500px;
+    color: white;
     margin: 0 auto;
+    font-weight: 400;
 }
 
 .hero {
@@ -45,6 +47,18 @@ main {
     margin: 7px 14px;
     padding: 7px 14px;
     width: 150px;
+    border-radius: 18px;
+    background-color: aqua;
+    border: 4px solid rgba(2, 138, 138, 0.525);
+}
+
+.button-container button:hover{
+    background-color: rgb(4, 190, 190);
+}
+
+.button-container button:active{
+    box-shadow: inset 1px 2px 5px rgba(120, 119, 119, 0.806);
+    color: white;
 }
 
 .start-game-container,
@@ -134,12 +148,13 @@ main {
 
 .history-cont div {
     padding: 5px 0;
-    background-color: aqua;
+    background-color: rgb(0, 89, 89);
     margin: 0 auto;
     margin-bottom: 10px;
     box-shadow: inset 0 2px 5px rgb(152, 151, 151);
     border-radius: 15px;
-    width: 80%;
+    width: 100%;
+    color: white;
 }
 
 .history-list {
@@ -147,4 +162,51 @@ main {
     width: 400px;
     overflow-y: scroll;
     text-align: center;
+}
+
+.dialog-box-container {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(250, 235, 215, 0.667);
+    position: absolute;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.dialog-box-cont {
+    flex-direction: column;
+    background-color: aqua;
+    height: auto;
+    width: 600px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(136, 135, 135, 0.621);
+}
+
+.dialog-box-cont h1{
+    width: 600px;
+}
+
+.dialog-box-cont .message{
+    font-size: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 800;
+    margin: 20px;
+    color: rgb(1, 57, 57);
+    text-align: center;
+}
+
+.race {
+    margin: 0 auto;
+    width: 250px;
+    font-size: 20px;
+    text-align: center;
+    padding: 7px 14px;
+    border-radius: 5px;
+}
+
+#race {
+    width: 200px;
 }
