--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,8 @@ main {
     width: 150px;
     border-radius: 18px;
     background-color: aqua;
-    border: 4px solid rgba(2, 138, 138, 0.525);
+    border: 4px solid rgba(2, 138, 138, 0.315);
+    box-shadow: 1px 2px 5px rgb(90, 89, 89);
 }
 
 .button-container button:hover{
