--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 
 h1 {
     text-align: center;
-    background-color: rgb(1, 108, 108);
+    background-color: #005959;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     width: 500px;
@@ -121,24 +121,36 @@ main {
 @keyframes pulse {
     0% {
       transform: scale(1);
+      color: hsl(180, 100%, 50%);
     }
     25% {
       transform: scale(1.1);
+      color: hsl(180, 100%, 30%);
     }
     50% {
       transform: scale(1);
+      color: hsl(180, 100%, 15%);
     }
     75% {
       transform: scale(1.1);
+      color: hsl(180, 100%, 30%);
     }
     100% {
       transform: scale(1);
+      color: hsl(180, 100%, 50%);
     }
 }
 
 .power-buts div:hover {
     color: rgb(3, 205, 205);
     animation: pulse 1s infinite;
+}
+
+.race p {
+    animation: pulse .5s infinite;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 25px;
+    letter-spacing: 2px;
 }
 
 .history-cont {
@@ -149,12 +161,14 @@ main {
 
 .history-cont div {
     padding: 5px 0;
-    background-color: rgb(0, 89, 89);
+    background: linear-gradient(90deg, #003434,#016c6c, #003434);
+    box-shadow: 0 5px 10px #7e7e7e;
+    box-shadow: 0px 0px 1px 3px #003434, 
+              0px 0px 5px 5px #3e3e3e9e;
     margin: 0 auto;
     margin-bottom: 10px;
-    box-shadow: inset 0 2px 5px rgb(152, 151, 151);
-    border-radius: 15px;
-    width: 100%;
+    /* border-radius: 15px; */
+    width: 77%;
     color: white;
 }
 
